# Nail_diagnosis_platform

./: .gitignore  README.md  config.py  db.py  detection.py  main.py  patient_data.json  pyproject.toml
https/: 127.0.0.1-key.pem  127.0.0.1.pem
router/: api_ai.py  api_private.py  api_public.py  app_private.py  app_public.py
router/models/: member.py  resource.py
router/services/: member.py  resource.py
run/: run_http.bat
sql/: init_env.sql
static/: curaxel.css  scripts.js  style.css
static/bootstrap/js/demo/: chart-area-demo.js
templates/: index.html  viewer.html
templates/bootstrap/: 404.html  addWork.html  blank.html  buttons.html  cards.html  charts.html  forgot-password.html  index.html  index_back.html  login.html  register.html  tables.html  utilities-animation.html  utilities-border.html  utilities-color.html  utilities-other.html  viewer.html
templates/includes/: footer.html  head.html  scripts.html  scrollbutton.html  sidebar.html  topbar.html  topbarviewer.html
test/: dumy_data.py
