[project]
name = "nail-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
]
