[project]
name = "nail-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "opencv-python>=4.12.0.88",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.20",
    "roboflow>=1.2.9",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
    "aiomysql>=0.3.2"
]

[tool.setuptools.packages.find]
include = ["nail_platform*"]
exclude = ["static*", "templates*", "tests*", "docs*", "https*", "model*", "router*"]
